# trip

./: CMakeLists.txt  Doxyfile.in  README.md  tripd.conf
docs/: COMMANDS.md  DESIGN.md  INSTALL.md  group.md  itad_registrations_histogram  itad_registrations_month
html/: annotated.html  annotated_dup.js  classes.html  commands_8c.html  commands_8c.js  commands_8c__incl.map  commands_8c__incl.md5  commands_8h.html  commands_8h.js  commands_8h__dep__incl.map  commands_8h__dep__incl.md5  commands_8h__incl.map  commands_8h__incl.md5  commands_8h_source.html  dir_000000_000002.html  dir_000000_000003.html  dir_000002_000003.html  dir_000002_000004.html  dir_000006_000000.html  dir_000006_000003.html  dir_000006_000004.html  dir_1c2c5465f0f32259d5bc67ae14dd3a57.html  dir_1c2c5465f0f32259d5bc67ae14dd3a57.js  dir_1c2c5465f0f32259d5bc67ae14dd3a57_dep.map  dir_1c2c5465f0f32259d5bc67ae14dd3a57_dep.md5  dir_2b1a946209a10c32ed7ce5dec2f54bea.html  dir_2b1a946209a10c32ed7ce5dec2f54bea.js  dir_2b1a946209a10c32ed7ce5dec2f54bea_dep.map  dir_2b1a946209a10c32ed7ce5dec2f54bea_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5903c71b979204ea1ce2d27420efeaa9.html  dir_5903c71b979204ea1ce2d27420efeaa9.js  dir_5903c71b979204ea1ce2d27420efeaa9_dep.map  dir_5903c71b979204ea1ce2d27420efeaa9_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b3320b59a4aa4a7431bc8488b87009bf.html  dir_b3320b59a4aa4a7431bc8488b87009bf_dep.map  (+147 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enums_8.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  (+31 more)
(+15 files in other folders)
